css grid commit

--- a/animation/index.html
+++ b/animation/index.html
@@ -11,6 +11,11 @@
     <div class="box1">
         안녕하세요
     </div>
+    <script>
+        alert("ㅎㅇ");
+        "use strict";
+        
+    </script>
 
 </body>
 </html>
